# refinedrust-dev

./: .gitignore  .gitlab-ci.yml  DEVELOPERS.md  LICENSE  LICENSE-coq  LICENSE-frontend  Makefile  README.md  SPEC_FORMAT.md  _CoqProject  _vimrc_local.vim  coq-lithium.opam  dune  dune-project  flake.nix  install-artifact-deps.sh  refinedrust.opam  rust-toolchain.toml  tutorial.md
rr_frontend/: .gitignore  .rustfmt.toml  Cargo.toml  RefinedRust.toml  clippy.toml  dune-project  limitations.md  refinedrust  rr_shims.json  rustup-toolchain
rr_frontend/.cargo/: config.toml
rr_frontend/analysis/: Cargo.toml
rr_frontend/analysis/src/: analysis_error.rs  lib.rs  mir_utils.rs  pointwise_state.rs
rr_frontend/analysis/src/abstract_interpretation/: abstract_state.rs  fixpoint_engine.rs
rr_frontend/analysis/src/domains/definitely_accessible/: analysis.rs  state.rs
rr_frontend/analysis/src/domains/definitely_allocated/: analysis.rs  mod.rs  state.rs
rr_frontend/analysis/src/domains/definitely_initialized/: analysis.rs  state.rs
rr_frontend/analysis/src/domains/framing/: analysis.rs  mod.rs  state.rs
rr_frontend/analysis/src/domains/maybe_borrowed/: analysis.rs  state.rs
rr_frontend/analysis/src/domains/reaching_definitions/: analysis.rs  state.rs
rr_frontend/analysis/testbins/analysis_driver/: Cargo.toml
rr_frontend/analysis/testbins/gen_accessibility_driver/: Cargo.toml
rr_frontend/analysis/testbins/gen_accessibility_driver/src/: main.rs
rr_frontend/analysis/tests/: test_accessibility.rs  test_analysis.rs  utils.rs
rr_frontend/analysis/tests/test_cases/definitely_accessible/: infinite_list.rs
rr_frontend/analysis/tests/test_cases/definitely_initialized/: calls.rs  repeated_assignment.rs
rr_frontend/analysis/tests/test_cases/gen_accessibility/: basic-move.rs  consume-call.rs  deref.rs  field-types.rs  join.rs  multiple-branches.rs  predicate-old-expr.rs  reassignment.rs  structs.rs
rr_frontend/annotations/: Cargo.toml
rr_frontend/annotations/src/: lib.rs
rr_frontend/attribute_parse/: Cargo.toml
rr_frontend/attribute_parse/src/: lib.rs  parse.rs
rr_frontend/case_studies/paper-examples/src/: main.rs
rr_frontend/case_studies/tests/: RefinedRust.toml
rr_frontend/case_studies/tests/src/: enums.rs  lib.rs  structs.rs  traits.rs
rr_frontend/examples/: minivec_fix.rs  paper.rs
rr_frontend/extra_proofs/tests/enums/: dune  enums.v
rr_frontend/output/main/: dune  extra_proofs_main.v  generated_code_main.v  generated_proof_assert_pair.v  generated_proof_box_add_42.v  generated_proof_main.v  generated_proof_mut_ref_add_42.v  generated_proof_mut_ref_add_client.v  generated_specs_main.v
rr_frontend/output/minivec_patched/: dune  extra_proofs_minivec.v  generated_code_minivec.v  generated_proof_RawVec_T_cap.v  generated_proof_RawVec_T_grow.v  generated_proof_RawVec_T_new.v  generated_proof_RawVec_T_ptr.v  generated_proof_Vec_T_cap.v  generated_proof_Vec_T_get.v  generated_proof_Vec_T_get_mut.v  generated_proof_Vec_T_get_unchecked.v  generated_proof_Vec_T_get_unchecked_mut.v  generated_proof_Vec_T_len.v  generated_proof_Vec_T_new.v  generated_proof_Vec_T_pop.v  generated_proof_Vec_T_ptr.v  generated_proof_Vec_T_push.v  generated_proof_get_mut_client.v  generated_specs_minivec.v
rr_frontend/radium/: Cargo.toml
rr_frontend/radium/src/: code.rs  coq.rs  lib.rs  specs.rs
rr_frontend/radium/src/coq/: binder.rs  command.rs  command_new.rs  eval.rs  eval_new.rs  inductive.rs  ltac.rs  mod.rs  module.rs  module_new.rs  section.rs  settings.rs  syntax.rs  syntax_new.rs  term.rs  term_new.rs  typeclasses.rs
rr_frontend/refinedrust_frontend/: Cargo.toml
rr_frontend/refinedrust_frontend/src/: main.rs
rr_frontend/refinedrust_frontend/tests/: runner.rs
rr_frontend/refinedrust_frontend/tests/deps_build/: Cargo.toml  dune-project
rr_frontend/rr_rustc_interface/: Cargo.toml
rr_frontend/rr_rustc_interface/src/: lib.rs
rr_frontend/rrconfig/: Cargo.toml
rr_frontend/rrconfig/src/: arg_value.rs  launch.rs  lib.rs
rr_frontend/translation/: Cargo.toml
rr_frontend/translation/src/: arg_folder.rs  base.rs  checked_op_analysis.rs  data.rs  enum_generator.rs  enum_spec_parser.rs  force_matches_macro.rs  function_body.rs  inclusion_tracker.rs  lib.rs  main.rs  parse.rs  parse_utils.rs  rrconfig.rs  shim_registry.rs  struct_spec_parser.rs  trait_registry.rs  traits.rs  type_translator.rs  tyvars.rs  utils.rs  verbose_function_spec_parser.rs
rr_frontend/translation/src/caesium/: mod.rs  specs.rs
rr_frontend/translation/src/environment/: collect_closure_defs_visitor.rs  collect_prusti_spec_visitor.rs  dump_borrowck_info.rs  loops.rs  mir_storage.rs  mod.rs  polonius_info.rs  procedure.rs
rr_frontend/translation/src/spec_parsers/: const_attr_parser.rs  crate_attr_parser.rs  enum_spec_parser.rs  mod.rs  module_attr_parser.rs  parse_utils.rs  struct_spec_parser.rs  trait_attr_parser.rs  trait_impl_attr_parser.rs  verbose_function_spec_parser.rs
stdlib/: Makefile  dune  dune-project  refinedrust-stdlib.opam
stdlib/alloc/: Cargo.toml  RefinedRust.toml
stdlib/alloc/src/: layout.rs  lib.rs
stdlib/alloc/theories/: dune  layout.v
stdlib/borrow/src/: lib.rs
stdlib/borrow/theories/: borrow.v  dune
stdlib/btreemap/src/: lib.rs
stdlib/closures/src/: lib.rs
stdlib/closures/theories/: closures.v  dune
stdlib/controlflow/src/: lib.rs
stdlib/iterator/src/: lib.rs  step.rs
stdlib/iterator/src/adapters/: map.rs
stdlib/iterator/src/traits/: iterator.rs
stdlib/iterator/theories/: dune  iterator.v  map.v  step.v
stdlib/option/: RefinedRust.toml  extra_specs.v
stdlib/option/src/: lib.rs
stdlib/ptr/: RefinedRust.toml
stdlib/ptr/src/: alignment.rs  lib.rs
stdlib/range/: RefinedRust.toml
stdlib/range/src/: lib.rs
stdlib/result/: RefinedRust.toml  extra_specs.v
stdlib/result/src/: lib.rs
stdlib/result/theories/: dune  result.v
stdlib/rwlock/src/: lib.rs
stdlib/spin/: RefinedRust.toml
stdlib/spin/src/: lib.rs  once.rs  relax.rs  rwlock.rs
stdlib/spin/theories/once/: dune  once_ghost_state.v
stdlib/vec/src/: lib.rs
(+224 files in other folders)
