opam-version: "2.0"
name: "refinedrust"
synopsis: "RefinedRust verification framework"
homepage: "https://gitlab.mpi-sws.org/lgaeher/refinedrust-dev"
bug-reports: "https://gitlab.mpi-sws.org/lgaeher/refinedrust-dev"
maintainer: "Lennard Gäher"
authors: "Lennard Gäher"
description: """
RefinedRust is a prototype framework for verifying safe and unsafe Rust code.
"""
license: "BSD-3-Clause"

depends: [
  "coq-lithium" {= version | = "~dev"}
  "coq-equations" { = "1.3+8.17" }
  "coq-lambda-rust" { = "dev" }
]

build: [
  [make "prepare-install-refinedrust"]
  [make "config%{caesium-config}%"]
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
