opam-version: "2.0"
name: "refinedrust"
synopsis: "RefinedRust verification framework"
homepage: "www.google.de"
bug-reports: "www.google.de"
maintainer: "Anonymous"
authors: "Anonymous"
description: """
RefinedRust is a prototype framework for verifying safe and unsafe Rust code.
"""
license: "BSD-3-Clause"

depends: [
  "coq-lithium" {= version | = "~dev"}
  "coq-equations" { = "1.3+8.17" }
  "coq-lambda-rust" { = "dev" }
]

depopts: [
  "coq-caesium-config-no-align"
]

build: [
  [make "prepare-install-refinedrust"]
  [make "config"] {!coq-caesium-config-no-align:installed}
  [make "config-no-align"] {coq-caesium-config-no-align:installed}
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

messages: [
  "with default configuration" {!coq-caesium-config-no-align:installed}
  "with no-align configuration" {coq-caesium-config-no-align:installed}
]
