opam-version: "2.0"
name: "refinedrust"
synopsis: "RefinedRust verification framework"
homepage: "https://gitlab.mpi-sws.org/lgaeher/refinedrust-dev"
bug-reports: "https://gitlab.mpi-sws.org/lgaeher/refinedrust-dev"
maintainer: "Lennard Gäher"
authors: "Lennard Gäher"
description: """
RefinedRust is a prototype framework for verifying safe and unsafe Rust code.
"""
license: "BSD-3-Clause"

depends: [
  "coq" { (= "8.17.1" ) }
  "coq-iris" { (= "dev.2023-09-11.0.1de1b311") | (= "dev") }
  "coq-stdpp-unstable"
  "dune" {>= "3.9.1"}
  "coq-record-update" {= "0.3.0"}
  "coq-equations" { = "1.3+8.17" }
  "coq-lambda-rust" { = "dev" }
]

depopts: [
  "coq-caesium-config-no-align"
]

build: [
  [make "prepare-install-refinedrust"]
  [make "config"] {!coq-caesium-config-no-align:installed}
  [make "config-no-align"] {coq-caesium-config-no-align:installed}
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

messages: [
  "with default configuration" {!coq-caesium-config-no-align:installed}
  "with no-align configuration" {coq-caesium-config-no-align:installed}
]
