[workspace]
members = [
    "annotations",
    "attribute_parse",
    "radium",
    "refinedrust_frontend",
    "rr_rustc_interface",
    "rrconfig",
    "translation"
]
resolver = "2"

[workspace.dependencies]
attribute_parse.path = "attribute_parse"
radium.path = "radium"
rr_rustc_interface.path = "rr_rustc_interface"
rrconfig.path = "rrconfig"
translation.path = "translation"

analysis = { git = "https://github.com/viperproject/prusti-dev.git", rev = "24bd4c5575ff1c0b13eb18cfe1a82992dfdb120d" }
config = { version = "0.14", default-features = false, features = ["toml"] }
csv = "1"
datafrog = "2"
derive_more = { version = "1.0.0-beta.6", features = ["constructor", "debug", "deref", "deref_mut", "display", "from", "into"] }
env_logger = { version = "0.11" }
from_variants = "1"
glob = "0.3"
indent_write = "2"
indoc = "2"
lazy_static = "1"
log = "0.4"
path-clean = "1"
regex = "1"
rustc-hash = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1.3"
topological-sort = "0.2"
typed-arena = "2"
unicode-xid = "0.2"
itertools = "0.12.1"

[workspace.package]
edition = "2021"
repository = "https://gitlab.mpi-sws.org/lgaeher/refinedrust-dev"
version = "0.1.0"
