[package]
name = "analysis"
authors = ["Federico Poli <federpoli@gmail.com>"]
license = "MPL-2.0"

edition.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
rr_rustc_interface.workspace = true

derive_more.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true

[dev-dependencies]
compiletest_rs.workspace = true
glob.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true
