[package]
name = "radium"
authors = ["The RefinedRust Developers and Contributors"]
license = "BSD-3-Clause"

edition.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
rrconfig.workspace = true

indent_write.workspace = true
derive_more.workspace = true
log.workspace = true
itertools.workspace = true
