[package]
name = "refinedrust_translate"
version = "0.1.0"
edition = "2021"

[[bin]]
name="refinedrust-rustc"
test=false
doctest=false

[[bin]]
name="cargo-refinedrust"
test=false
doctest=false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7.1"
fs_extra = "1.3.0"

translation = { path = "../translation" }
rr_rustc_interface = { path = "../rr_rustc_interface" }
rrconfig = { path = "../rrconfig" }


[package.metadata.rust-analyzer]
rustc_private=true
