[package]
name = "rrconfig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11"
serde = {version = "1.0.130", features = ["derive"]}
lazy_static = "1.4.0"

serde_json = "1.0"
toml = "0.8.8"
