[package]
name = "rrconfig"
authors = ["ETH Zurich", "The Rust Project Developers"]
license = "MPL-2.0 AND MIT"

edition.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
config.workspace = true
lazy_static.workspace = true
log.workspace = true
path-clean.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
