[package]
name = "translation"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4"
datafrog = "2.0.1"
env_logger = "0.7.1"
regex = "1"
rustc-hash = "1.1.0"
csv = "1.1"
lazy_static = "1.4.0"
typed-arena = "2.0.1"
serde_json = "1.0"
serde = {version = "1.0.130", features = ["derive"]}

analysis = { path = "../analysis" }
radium = { path = "../radium" }
rr_rustc_interface = { path = "../rr_rustc_interface" }
attribute_parse = { path = "../attribute_parse" }
rrconfig = { path = "../rrconfig" }


[package.metadata.rust-analyzer]
rustc_private=true
