[package]
name = "gen_accessibility_driver"
edition = "2021"
version = "1.0.0"
authors = ["Federico Poli <federpoli@gmail.com>"]
license = "MPL-2.0"

[dependencies]
analysis = { path = "../..", features = ["test-utils"] }
rr_rustc_interface.path = "../../../rr_rustc_interface"

env_logger = "0.11"

[workspace]
